extensions/extSymbology/src/org/gvsig/symbology/fmap/labeling/parse/LabelExpressionParser.java
/* Generated By:JavaCC: Do not edit this line. LabelExpressionParser.java */
/* gvSIG. Sistema de Información Geográfica de la Generalitat Valenciana
 *
 * Copyright (C) 2004 IVER T.I. and Generalitat Valenciana.
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307,USA.
 *
 * For more information, contact:
 *
 *  Generalitat Valenciana
 *   Conselleria d'Infraestructures i Transport
 *   Av. Blasco Ibáñez, 50
 *   46010 VALENCIA
 *   SPAIN
 *
 *      +34 963862235
 *   gvsig@gva.es
 *      www.gvsig.gva.es
 *
 *    or
 *
 *   IVER T.I. S.A
 *   Salamanca 50
 *   46005 Valencia
 *   Spain
 *
 *   +34 963163400
 *   dac@iver.es
 */
package org.gvsig.symbology.fmap.labeling.parse;
import java.util.*;
import java.io.*;


import com.hardcode.gdbms.engine.values.*;
import org.gvsig.symbology.fmap.rendering.filter.operations.*;
import org.gvsig.symbology.fmap.labeling.parse.*;
import org.gvsig.symbology.fmap.labeling.lang.functions.*;
/**
 * @author Pepe Vidal Salvador - jose.vidal.salvador@iver.es
 * @author Jaume Dominguez Faus - jaume.dominguez@gmail.com
 *
 */
public class LabelExpressionParser implements LabelExpressionParserConstants {
        private Stack stack = new Stack();
        private static OperatorsFactory operators = OperatorsFactory.getInstance();
        private Hashtable<String, Value> symbols = new Hashtable<String, Value>();
        private ArrayList<String> classNames = new ArrayList<String>();

        public ArrayList<String> getClassNames (){
                return classNames;
        }

        public void addClassName(String name){

                for (int i = 0; i < classNames.size(); i++) {
                        if(classNames.get(i).compareTo(name)==0)
                                return;
                }
                classNames.add(name);

        }

        public Hashtable<String,Value> getSymbols(){

                return symbols;

        }

        public Object pop() throws ExpressionException {

                Object popObject = stack.pop();
                Object result = ((Expression)popObject).evaluate();

                if(result instanceof String) {
                        return new String (result.toString());
                }
                else if (result instanceof Boolean) {
                        return new Boolean (result.toString());
                }
                else if (result instanceof Double) {
                        return Double.valueOf(result.toString());
                }
                else if (result instanceof Integer) {
                        return Integer.valueOf(result.toString());
                }
                return null;

        }

        public Stack getStack(){

                return this.stack;

        }

        public LabelExpressionParser(StringReader reader, Hashtable<String, Value> symbolsTable) {

                this(reader);
                this.symbols = symbolsTable;

        }

        /**
	 * it is default because it is used in the unit tests
	 * but this method is not part of the public API, so
	 * don't use it!
	 */
        void putSymbol(String string, Value value){

                this.symbols.put(string,value);

        }

        public static String tokenFor(int tokenCode) {

                return tokenImage[tokenCode].replaceAll("\"", "");

        }

        public void setOperatorsFactory (OperatorsFactory opFac) {

                this.operators = opFac;

        }

        public static void main(String[]args)throws ParseException,ExpressionException{

                LabelExpressionParser parser = new LabelExpressionParser(new StringReader("([RD_6]+3)*5;"));
                parser.symbols.put("RD_6",ValueFactory.createValue(2));
                operators.addOperator(IndexOfFunction.class);
                operators.addOperator(SubstringFunction.class);
                parser.setOperatorsFactory(operators);
                parser.LabelExpression();
                System.out.print(((Expression)(parser.getStack().pop())).evaluate().toString());


        }

/* LABEL EXPRESSION */
//We have to use this function if we want to evaluate an String which contains different Expressions
//inside
  final public void LabelExpression() throws ParseException {
    Expression();
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(2)) {
        jj_consume_token(EOFIELD);
        Expression();
                         Expression leftExpression = (Expression)stack.pop();
                 Expression rightExpression = (Expression)stack.pop();

                         Expression labelExpr = new LabelExpressionOperator(symbols);
                         labelExpr.addArgument(0, rightExpression);
                         labelExpr.addArgument(0, leftExpression);

                stack.push(labelExpr);
      } else if (jj_2_3(2)) {
        Expression();
            Expression leftExpression2 = (Expression)stack.pop();
                Expression rightExpression2 = (Expression)stack.pop();

                        Expression fieldExpr = new FieldExpressionOperator(symbols);
                        fieldExpr.addArgument(0, rightExpression2);
                        fieldExpr.addArgument(0, leftExpression2);

                stack.push(fieldExpr);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void Expression() throws ParseException {
    AndExpression();
    label_2:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_2;
      }
      jj_consume_token(OR);
      AndExpression();
    Expression leftExpression = (Expression)stack.pop();
    Expression rightExpression = (Expression)stack.pop();

        Expression orExpr = new OrOperator(symbols);
        orExpr.addArgument(0, rightExpression);
        orExpr.addArgument(0, leftExpression);

    stack.push(orExpr);
    }
  }

  final public void AndExpression() throws ParseException {
  Token x;
    EqCompExpression();
    label_3:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_3;
      }
      x = jj_consume_token(AND);
      EqCompExpression();
    Expression rightExpression = (Expression)stack.pop();
    Expression leftExpression = (Expression)stack.pop();

    Expression func = new AndOperator(symbols);

    func.addArgument(0, rightExpression);
    func.addArgument(0, leftExpression);

    stack.push(func);
    }
  }

  final public void EqCompExpression() throws ParseException {
  Token x;
    ComparisonExpression();
    label_4:
    while (true) {
      if (jj_2_6(2)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_7(2)) {
        x = jj_consume_token(EQ);
      } else if (jj_2_8(2)) {
        x = jj_consume_token(NE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      ComparisonExpression();
    Expression rightExpression = (Expression)stack.pop();
    Expression leftExpression = (Expression)stack.pop();
    Expression func = null;

    if (x.kind == EQ)func = new EqOperator(symbols);
    else if (x.kind == NE)func = new NeOperator(symbols);

    func.addArgument(0, rightExpression);
    func.addArgument(0, leftExpression);

    stack.push(func);
    }
  }

  final public void ComparisonExpression() throws ParseException {
  Token x;
    AdditiveExpression();
    label_5:
    while (true) {
      if (jj_2_9(2)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_10(2)) {
        x = jj_consume_token(LT);
      } else if (jj_2_11(2)) {
        x = jj_consume_token(LE);
      } else if (jj_2_12(2)) {
        x = jj_consume_token(GT);
      } else if (jj_2_13(2)) {
        x = jj_consume_token(GE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      AdditiveExpression();
    Expression rightExpression = (Expression)stack.pop();
    Expression leftExpression = (Expression)stack.pop();
    Expression func = null;


    if (x.kind == LT)func = new LessThanOperator(symbols);
    else if (x.kind == LE)func = new LessThanOrEqualsOperator(symbols);
    else if (x.kind == GT)func = new GreaterThanOperator(symbols);
    else if (x.kind == GE)func = new GreaterThanOrEqualsOperator(symbols);

    func.addArgument(0, rightExpression);
    func.addArgument(0, leftExpression);

    stack.push(func);
    }
  }

  final public void AdditiveExpression() throws ParseException {
  Token x;
    MultiplicativeExpression();
    label_6:
    while (true) {
      if (jj_2_14(2)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_15(2)) {
        x = jj_consume_token(PLUS);
      } else if (jj_2_16(2)) {
        x = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      MultiplicativeExpression();
    Expression rightExpression = (Expression)stack.pop();
    Expression leftExpression = (Expression)stack.pop();
    Expression func = null;

    if (x.kind == PLUS)func = new AddOperator(symbols);
    else func = new MinusOperator(symbols);

    func.addArgument(0, rightExpression);
    func.addArgument(0, leftExpression);

    stack.push(func);
    }
  }

//void MultiplicativeExpression():{
//  Token x;
//}
//{
//  UnaryElement()((x = <MULTIPLY>
//  | x = <DIVIDE>)UnaryElement(){
//  	try{
//  			Expression A = (Expression) stack.pop();
//			Expression B = (Expression) stack.pop();
//			 boolean aInt = (((Expression) A).evaluate() instanceof Integer);
//			 boolean bInt = (((Expression) B).evaluate() instanceof Integer);
//			if (aInt &&	bInt) {
//				int a = (Integer) A.evaluate();
//				int b = (Integer) B.evaluate();
//				if (x.kind == MULTIPLY)
//					stack.push(new NumericalConstant(new Integer(b * a),symbols));
//				else
//					stack.push(new NumericalConstant(new Integer(b / a),symbols));
//			} else {
//
//				double a = new Double(((Expression)A).evaluate().toString());
//                double b = new Double(((Expression)B).evaluate().toString());
//				if (x.kind == MULTIPLY)
//					stack.push(new NumericalConstant(new Double(b * a),symbols));
//				else
//					stack.push(new NumericalConstant(new Double(b / a),symbols));
//			}}catch (ClassCastException ex) {
//                  ex.printStackTrace();
//            } catch (ExpressionException e) {
//				  e.printStackTrace();
//			}
//
//	})*
//}
  final public void MultiplicativeExpression() throws ParseException {
  Token x;
    UnaryElement();
    label_7:
    while (true) {
      if (jj_2_17(2)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_18(2)) {
        x = jj_consume_token(MULTIPLY);
      } else if (jj_2_19(2)) {
        x = jj_consume_token(DIVIDE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      UnaryElement();
    Expression rightExpression = (Expression)stack.pop();
    Expression leftExpression = (Expression)stack.pop();
    Expression func = null;

    if (x.kind == MULTIPLY)func = new MultOperator(symbols);
    else func = new DivOperator(symbols);

    func.addArgument(0, rightExpression);
    func.addArgument(0, leftExpression);

    stack.push(func);
    }
  }

  final public void UnaryElement() throws ParseException {
  Token x = null;
    if (jj_2_22(2)) {
      if (jj_2_20(2)) {
        x = jj_consume_token(PLUS);
      } else if (jj_2_21(2)) {
        x = jj_consume_token(MINUS);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
      UnaryElement();
              try{
                 Object A = stack.pop();
                         if ((((Expression) A).evaluate() instanceof Integer)) {
                                int a = (Integer) ((Expression) A).evaluate();
                                if (x.kind == PLUS)
                                        stack.push(new NumericalConstant(new Integer(a),symbols));
                                else
                                        stack.push(new NumericalConstant(new Integer(-a),symbols));
                        } else {
                                double a = (Double) ((Expression) A).evaluate();
                                if (x.kind == PLUS)
                                        stack.push(new NumericalConstant(new Double(a),symbols));
                                else
                                        stack.push(new NumericalConstant(new Double(-a),symbols));
                        }
                         } catch (ClassCastException ex) {
               ex.printStackTrace();
             }catch (ExpressionException ex) {
                 ex.printStackTrace();
             }
    } else if (jj_2_23(2)) {
      BooleanUnaryElement();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void BooleanUnaryElement() throws ParseException {
        Token t;
    if (jj_2_24(2)) {
      t = jj_consume_token(NOT);
      UnaryElement();
                Expression rightExpression = (Expression)stack.pop();
                Expression func = new NotOperator(symbols);
                func.addArgument(0, rightExpression);
                stack.push(func);
    } else if (jj_2_25(2)) {
      Element();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Element() throws ParseException {
  Token x;
  String y =  "[$,A-Z,_,a-z]([$,A-Z,_,a-z]|[0-9])*";
    if (jj_2_26(2)) {
      jj_consume_token(OPEN_SQ_BRACKETS);
      x = jj_consume_token(IDENTIFIER);
      jj_consume_token(CLOSE_SQ_BRACKETS);
    ReplaceOperator func = new ReplaceOperator(symbols);
     func.addArgument(x.image);
        stack.push(func);
        addClassName(x.image);
    } else if (jj_2_27(2)) {
      x = jj_consume_token(INTEGER);
        NumericalConstant intC = new NumericalConstant(Integer.valueOf(x.image),symbols);
        stack.push(intC);
    } else if (jj_2_28(2)) {
      x = jj_consume_token(FLOATING_POINT);
        NumericalConstant doubleC = new NumericalConstant(Double.valueOf(x.image),symbols);
        stack.push(doubleC);
    } else if (jj_2_29(2)) {
      x = jj_consume_token(STRING);
    StringConstant stringValue = new StringConstant(x.image.substring(1, x.image.length()-1),symbols);
    stack.push(stringValue);
    } else if (jj_2_30(2)) {
      x = jj_consume_token(BOOLEAN);
    BooleanConstant boolValue = new BooleanConstant(x.image,symbols);
    stack.push(boolValue);
    } else if (jj_2_31(2)) {
      x = jj_consume_token(NULL);
        NullConstant nullValue = new NullConstant(symbols);
    stack.push(nullValue);
    } else if (jj_2_32(2)) {
      function();
    } else if (jj_2_33(2)) {
      jj_consume_token(OPEN_PARENTHESIS);
      Expression();
      jj_consume_token(CLOSE_PARENTHESIS);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void function() throws ParseException {
  String functionName;
  int argCount = 0;
  Expression function;
  Token x;
    if (jj_2_34(2)) {
      jj_consume_token(IDENTIFIER);
    functionName = token.image;
      argCount = Arguments();
    try {
        function = (Expression) operators.functions.get(functionName).getConstructor(new Class[] { Hashtable.class }).newInstance( new Hashtable<String, Value>());
    }
    catch (Exception e){
      {if (true) throw new ParseException("Problem with function '"+functionName+"': "+e.toString());}
    }
    if (function == null){if (true) throw new ParseException("Nonexisting function name '"+functionName+"'");}
    for (int i = 0;
    i<argCount;
    i++){
      Expression arg = (Expression)stack.pop();
      function.addArgument(0, arg);
    }
    stack.push(function);
    } else if (jj_2_35(2)) {
      x = jj_consume_token(IDENTIFIER);
    StringConstant stringValue = new StringConstant(x.image,symbols);
    stack.push(stringValue);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public int Arguments() throws ParseException {
  int argCount = 0;
    jj_consume_token(OPEN_PARENTHESIS);
    if (jj_2_36(2)) {
      argCount = ArgumentList();
    } else {
      ;
    }
    jj_consume_token(CLOSE_PARENTHESIS);
    {if (true) return argCount;}
    throw new Error("Missing return statement in function");
  }

  final public int ArgumentList() throws ParseException {
  int argCount = 0;
    Expression();
    argCount++;
    label_8:
    while (true) {
      if (jj_2_37(2)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(COMMA);
      Expression();
    argCount++;
    }
    {if (true) return argCount;}
    throw new Error("Missing return statement in function");
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }
